--- a/api/src/test/resources/application-test.properties
+++ b/api/src/test/resources/application-test.properties
@@ -1,10 +1,11 @@
-# Connexion a la BDD
 spring.datasource.url=jdbc:mysql://localhost:3306/cesi_zen
 spring.datasource.username=root
 spring.datasource.password=password
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# Hibernate & JPA
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
+
+spring.main.allow-bean-definition-overriding=true
+spring.security.enabled=false
