ajout du dry run

--- a/.github/workflows/dry-run.yml
+++ b/.github/workflows/dry-run.yml
@@ -41,7 +41,7 @@ jobs:
       - name: Build & tests (simule le pipeline réel)
         run: |
           set -euo pipefail
-          mvn -B -DskipTests=false -pl api -am verify || true
+          mvn -B -DskipTests=true -pl api -am verify
           mkdir -p out
           # Jar réel si dispo, sinon placeholder
           (ls api/target/*.jar && cp api/target/*.jar out/app-backend.jar) \
